New entries should be added at the top

2005-02-121 fixed ps color bug - JDH

2005-02-15 fixed missing qt file

2005-02-15 banished error_msg and report_error.  Internal backend
           methods like error_msg_gtk are preserved.  backend writers,
           check your backends, and diff against 0.72 to make sure I
           did the right thing! - JDH


2005-02-14 Added enthought traits to matplotlib tree - JDH

===========================================================

2005-02-14 0.72 released

2005-02-14 fix bug in cbook alltrue() and onetrue() - SC

2005-02-11 updated qtagg backend from Ted - JDH

2005-02-11 matshow fixes for figure numbering, return value and docs - FP

2005-02-09 new zorder example for fine control in zorder_demo.py - FP

2005-02-09 backend renderer draw_lines now has transform in backend,
           as in draw_markers; use numerix in _backend_agg, aded small
           line optimization to agg

2005-02-09 subplot now deletes axes that it overlaps 

2005-02-08 Added transparent support for gzipped files in load/save - Fernando
           Perez (FP from now on).

2005-02-08 Small optimizations in PS backend.  They may have a big impact for
           large plots, otherwise they don't hurt  - FP

2005-02-08 Added transparent support for gzipped files in load/save - Fernando
           Perez (FP from now on).

2005-02-07 Added newstyle path drawing for markers - only implemented
           in agg currently - JDH

2005-02-05 Some superscript text optimizations for ticking log plots

2005-02-05 Added some default key press events to pylab figures: 'g'
           toggles grid - JDH

2005-02-05 Added some support for handling log switching for lines
           that have nonpos data - JDH

2005-02-04 Added Nadia's contour patch - contour now has matlab
           compatible syntax; this also fixed an unequal sized contour
           array bug- JDH

2005-02-04 Modified GTK backends to allow the FigureCanvas to be resized