@@ -141,7 +141,7 @@ the exception of those in mlab.py provided by matplotlib.
 """
 from __future__ import generators
 
-__version__  = '0.72'
+__version__  = '0.73'
 __revision__ = '$Revision$'
 __date__     = '$Date$'
 
